--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <div class="hero">
     <div class="container">
       <h1 class="logo">UCHIA</h1>
-      <p class="tagline">You Can Have It All</p>
+      <p class="tagline">U Can Have It All</p>
       
       <p class="message">
         You <strong>deserve</strong> to indulge yourself.
