--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Uchia - U Can Have It All</title>
+  <title>Uchia - You Can Have It All</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;600;700&display=swap">
   <style>
     * {
@@ -219,7 +219,7 @@
   <div class="hero">
     <div class="container">
       <h1 class="logo">UCHIA</h1>
-      <p class="tagline">U Can Have It All</p>
+      <p class="tagline">You Can Have It All</p>
       
       <p class="message">
         You <strong>deserve</strong> to indulge yourself.
@@ -254,6 +254,12 @@
           <div class="feature-icon">🎯</div>
           <div class="feature-title">Visual Grid</div>
           <div class="feature-text">See everything at a glance. High-quality images. Prices displayed. Links ready when you are.</div>
+        </div>
+
+        <div class="feature">
+          <div class="feature-icon">🔒</div>
+          <div class="feature-title">Your Data</div>
+          <div class="feature-text">Everything stays local. No accounts. No tracking. Just you and your wishlist.</div>
         </div>
       </div>
 
