--- a/uchia-bookmarklet.html
+++ b/uchia-bookmarklet.html
@@ -324,6 +324,42 @@
       animation: fadeIn 0.3s ease-out;
     }
 
+    .gift-list {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      animation: fadeIn 0.3s ease-out;
+    }
+
+    .gift-list .gift-card {
+      display: flex;
+      flex-direction: row;
+      height: 140px;
+    }
+
+    .gift-list .gift-image-container {
+      width: 180px;
+      height: 100%;
+      flex-shrink: 0;
+    }
+
+    .gift-list .gift-details {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .gift-list .gift-title {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .gift-list .gift-price {
+      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
+    }
+
     .gift-card {
       background: white;
       border: 1px solid #e0e0e0;
@@ -608,10 +644,16 @@
 
     <div class="section-header">
       <h2 class="section-title" id="list-title">Wishlist</h2>
-      <button class="btn" onclick="showAddGiftModal()" id="add-gift-btn">
-        <svg class="icon" viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
-        Add Gift
-      </button>
+      <div style="display: flex; gap: 1rem;">
+        <button class="btn btn-secondary" onclick="toggleViewMode()" id="view-toggle-btn">
+          <svg class="icon" viewBox="0 0 24 24"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>
+          <span id="view-mode-text">Grid View</span>
+        </button>
+        <button class="btn" onclick="showAddGiftModal()" id="add-gift-btn">
+          <svg class="icon" viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+          Add Gift
+        </button>
+      </div>
     </div>
 
     <div id="gifts-container"></div>
@@ -636,14 +678,17 @@
       trash: '<svg class="icon" viewBox="0 0 24 24"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path></svg>',
       gift: '🎁',
       external: '<svg class="icon" viewBox="0 0 24 24"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>',
-      edit: '<svg class="icon" viewBox="0 0 24 24"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>'
+      edit: '<svg class="icon" viewBox="0 0 24 24"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>',
+      grid: '<svg class="icon" viewBox="0 0 24 24"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>',
+      list: '<svg class="icon" viewBox="0 0 24 24"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3.01" y2="6"></line><line x1="3" y1="12" x2="3.01" y2="12"></line><line x1="3" y1="18" x2="3.01" y2="18"></line></svg>'
     };
 
     let state = {
       lists: [
         { id: 1, name: 'Wishlist', gifts: [] }
       ],
-      activeListId: 1
+      activeListId: 1,
+      viewMode: 'grid' // 'grid' or 'list'
     };
 
     function getActiveList() {
@@ -653,14 +698,19 @@
     function saveToLocalStorage() {
       localStorage.setItem('uchiaGiftLists', JSON.stringify(state.lists));
       localStorage.setItem('uchiaActiveListId', state.activeListId);
+      localStorage.setItem('uchiaViewMode', state.viewMode);
     }
 
     function loadFromLocalStorage() {
       const savedLists = localStorage.getItem('uchiaGiftLists');
       const savedActiveId = localStorage.getItem('uchiaActiveListId');
+      const savedViewMode = localStorage.getItem('uchiaViewMode');
       if (savedLists) {
         state.lists = JSON.parse(savedLists);
         state.activeListId = savedActiveId ? parseInt(savedActiveId) : state.lists[0]?.id;
+      }
+      if (savedViewMode) {
+        state.viewMode = savedViewMode;
       }
     }
 
@@ -917,6 +967,12 @@
 
     function setActiveList(listId) {
       state.activeListId = listId;
+      saveToLocalStorage();
+      render();
+    }
+
+    function toggleViewMode() {
+      state.viewMode = state.viewMode === 'grid' ? 'list' : 'grid';
       saveToLocalStorage();
       render();
     }
@@ -1310,7 +1366,8 @@
         return;
       }
 
-      container.innerHTML = '<div class="gift-grid">' + activeList.gifts.map((gift, index) => `
+      const containerClass = state.viewMode === 'grid' ? 'gift-grid' : 'gift-list';
+      container.innerHTML = `<div class="${containerClass}">` + activeList.gifts.map((gift, index) => `
         <div class="gift-card"
              draggable="true"
              data-index="${index}"
@@ -1388,11 +1445,23 @@
       renderTabs();
       renderGifts();
       renderFooter();
-      
+
       // Hide Add Gift button if no lists
       const addGiftBtn = document.getElementById('add-gift-btn');
       if (addGiftBtn) {
         addGiftBtn.style.display = state.lists.length === 0 ? 'none' : 'inline-flex';
+      }
+
+      // Update view toggle button
+      const viewToggleBtn = document.getElementById('view-toggle-btn');
+      const viewModeText = document.getElementById('view-mode-text');
+      if (viewToggleBtn && viewModeText) {
+        if (state.viewMode === 'grid') {
+          viewToggleBtn.innerHTML = `${icons.list}<span id="view-mode-text">List View</span>`;
+        } else {
+          viewToggleBtn.innerHTML = `${icons.grid}<span id="view-mode-text">Grid View</span>`;
+        }
+        viewToggleBtn.style.display = state.lists.length === 0 ? 'none' : 'inline-flex';
       }
     }
 
